syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.namingserver;

import "DistLedgerCommonDefinitions.proto";

// NamingServer Interface of the DistLedger Service

message RegisterRequest {
	string serviceName = 1;
	string qualifier = 2;
	string host = 3;
	int32 port = 4;
}

message RegisterResponse {

}

message LookupRequest {
	string serviceName = 1;
	string qualifier = 2;
}

message LookupResponse {
	repeated Server server = 1;
}

message DeleteRequest {
	string serviceName = 1;
	string host = 2;
	int32 port = 3;
}

message DeleteResponse {

}

service NamingServerService {
	rpc register(RegisterRequest) returns (RegisterResponse);
	rpc lookup(LookupRequest) returns (LookupResponse);
	rpc delete(DeleteRequest) returns (DeleteResponse);
}
